<resources>
    <string name="app_name">Mars Rover Photos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_refresh">Tap to Refresh</string>
    <string name="trefresh">Refresh</string>
    <string name="landing_date">Landing Date</string>
    <string name="launch_date">Launch Date</string>
    <string name="rover_image">Rover Image</string>
    <string name="set_wallpaper_button">Set Wallpaper Button</string>
    <string name="download_image_button">Download Image Button</string>
    <string name="share_image_button">Share Image Button</string>
    <string name="select_sol">Select Sol</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="rover_captured_image">Rover Captured Image</string>
    <string name="share_text">Take a look at this photo taken by %1$s Rover!.\n\n%2$s\n\nFound it on : https://play.google.com/store/apps/details?id=com.akhilasdeveloper.marsroverphotos</string>
    <string name="share_texts">Take a look at these photos taken by %1$s Rover!.\n\n%2$s\n\nFound these on : https://play.google.com/store/apps/details?id=com.akhilasdeveloper.marsroverphotos</string>
    <string name="view_photos">View Photos %1$s</string>
    <string name="sol">Sol - %1$s</string>
    <string name="select_date">Select Date</string>
    <string name="rover_status">Rover Status : %1$s</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="share_as">Share As</string>
    <string name="share_as_link_s">Share as link(s)</string>
    <string name="share_as_image_s">Share as image(s)</string>
    <string name="downloading">Downloading</string>
    <string name="info_about_image">Info about image</string>
    <string name="info">Info</string>
    <string name="more_actions_for_image">More actions for image</string>
    <string name="more">More</string>
    <string name="more_options">More Options</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="save_to_device">Save to device</string>
    <string name="loading">Loading</string>
    <string name="image_id">Image ID</string>
    <string name="camera">Camera</string>
    <string name="rover">Rover</string>
    <string name="date">Date</string>
    <string name="sol_">Sol</string>
    <string name="share_as_link">As link</string>
    <string name="share_as_image">As image</string>
    <string name="select">Select</string>
    <string name="permission_consent">App needs storage permission to save photos to device. Please allow permission to continue.</string>
    <string name="permission">Storage Permission</string>
    <string name="allow">Allow</string>
    <string name="permission_cancel">Storage permission not granted.</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="remove_from_liked_photos">Remove from Liked Photos</string>
    <string name="selected_items_will_be_removed">Selected Items will be removed from Liked Photos</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="clear_selection_consent">You are going to clear the selection</string>
    <string name="quit">Quit?</string>
    <string name="exit_consent">Are you sure you want to quit the application?</string>
    <string name="last_photo_updated">Last photo updated : %1$s</string>

    <string name="error_no_internet">No Internet! Offline mode</string>
    <string name="error_network_timeout">Network timeout</string>
    <string name="syncing_database">Syncing Database</string>
    <string name="total_count_photos">%1$s photos</string>
    <string name="simplify_photo_count">%1$s+</string>
    <string name="wallpapet_set">Wallpaper set</string>
    <string name="items_removed_from_like">Items removed from Liked Photos</string>
    <string name="undo">Undo</string>
    <string name="photos_added_back">Photos are added back</string>
    <string name="images_saved_to_gallery">Image(s) Saved to Gallery</string>
    <string name="share_via">Share Via</string>
    <string name="adding_to_likes">Adding to Liked Photos</string>
    <string name="not_selected">Not Selected</string>
    <string name="selected">Selected (%1$s)</string>
    <string name="progress">%1$s%%</string>
    <string name="camera_name">%1$s (%2$s)</string>
    <string name="view_image">View Image</string>
    <string name="failed_to_save_image">Failed to Save Image</string>
    <string name="liked_photos">%1$s (Liked Photos)</string>
    <string name="about">About</string>
    <string name="about_description">Discover images captured by NASA\'s mars rovers!</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="version_v1_0">Version : v1.0</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="api">API</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="_1_0">1.0</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="_1_3">1.3</string>
    <string name="fetch_latest_photos">Fetch Latest Photos</string>
    <string name="Sync_Completed">Sync completed</string>
</resources>