<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_twotone_share_24"
        android:title="@string/share"
        android:contentDescription="@string/share"
        app:showAsAction="always"
        app:iconTint="@color/system_for"/>

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_twotone_arrow_circle_down_24"
        android:title="@string/download"
        android:contentDescription="@string/download"
        app:showAsAction="always"
        app:iconTint="@color/system_for"/>

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_heart_unfill"
        android:title="@string/like"
        android:contentDescription="@string/like"
        app:showAsAction="always"
        app:iconTint="@color/system_for"/>

    <item
        android:id="@+id/wallpaper"
        android:icon="@drawable/ic_twotone_wallpaper_24"
        android:title="@string/wallpaper"
        android:contentDescription="@string/wallpaper"
        app:showAsAction="always"
        app:iconTint="@color/system_for"/>

</menu>