<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:background="@color/black"
    android:animateLayoutChanges="true">

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_page"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/roverViewImage"
        android:transitionName="testTransition"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:background="@drawable/image_viewer_top_background_gradient"
        android:id="@+id/top_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:id="@+id/menus"
        android:background="@drawable/image_viewer_bottom_background_gradient">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallpaper"
            android:id="@+id/setWallpaper"
            android:contentDescription="@string/set_wallpaper_button"
            app:drawableTopCompat="@drawable/ic_twotone_wallpaper_24"
            app:drawableTint="@color/white"
            style="@style/ViewBottomButton"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_twotone_share_24"
            android:layout_weight="1"
            android:id="@+id/share"
            android:contentDescription="@string/share_image_button"
            app:drawableTopCompat="@drawable/ic_twotone_share_24"
            app:drawableTint="@color/white"
            android:text="@string/share"
            style="@style/ViewBottomButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/like"
            android:contentDescription="@string/share_image_button"
            app:drawableTopCompat="@drawable/ic_heart_unfill"
            app:drawableTint="@color/white"
            android:text="@string/like"
            style="@style/ViewBottomButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/info"
            android:contentDescription="@string/info_about_image"
            app:drawableTopCompat="@drawable/ic_info"
            app:drawableTint="@color/white"
            android:text="@string/info"
            style="@style/ViewBottomButton"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>