<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardBackgroundColor="@color/appbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_window_padding_half"
        android:layout_marginBottom="@dimen/global_window_padding_half">

        <TextView
            android:id="@+id/select"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/select"
            app:drawableStartCompat="@drawable/ic_check_square"
            app:drawableTint="@color/system_for" />

        <TextView
            android:id="@+id/info_select"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/info"
            app:drawableStartCompat="@drawable/ic_info"
            app:drawableTint="@color/system_for" />

        <TextView
            android:id="@+id/share_select"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/share"
            app:drawableStartCompat="@drawable/ic_twotone_share_24"
            app:drawableTint="@color/system_for" />

        <TextView
            android:id="@+id/wallpaper_select"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/wallpaper"
            app:drawableStartCompat="@drawable/ic_twotone_wallpaper_24"
            app:drawableTint="@color/system_for" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>