<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/global_window_padding"
    android:layout_marginEnd="@dimen/global_window_padding"
    android:layout_marginBottom="@dimen/global_window_padding_half"
    android:layout_marginTop="@dimen/global_window_padding_half"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/link_select"
        style="@style/photo_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/global_window_padding"
        android:text="@string/share_as_link_s"
        app:drawableStartCompat="@drawable/ic_link"
        app:drawableTint="@color/system_for" />

    <TextView
        android:id="@+id/image_select"
        style="@style/photo_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/global_window_padding"
        android:text="@string/share_as_image_s"
        app:drawableStartCompat="@drawable/ic_outline_image_24"
        app:drawableTint="@color/system_for" />

    <TextView
        android:id="@+id/download_select"
        style="@style/photo_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/global_window_padding"
        android:text="@string/save_to_device"
        app:drawableStartCompat="@drawable/ic_twotone_arrow_circle_down_24"
        app:drawableTint="@color/system_for" />

</LinearLayout>