<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/popup_window_width"
    app:cardBackgroundColor="@color/appbar"
    app:cardCornerRadius="@dimen/corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/tool_bar_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_top_title_text_height"
            android:layout_marginStart="@dimen/global_window_padding"
            android:layout_marginTop="@dimen/global_window_padding"
            android:layout_marginEnd="@dimen/global_window_padding"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/permission"
            android:textColor="@color/system_for"
            app:drawableStartCompat="@drawable/ic_info"
            app:drawableTint="@color/system_for" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/global_window_padding"
            android:layout_marginEnd="@dimen/global_window_padding"
            android:layout_marginBottom="@dimen/global_window_padding_half"
            android:layout_marginTop="@dimen/global_window_padding_half">

            <TextView
                android:id="@+id/description"
                style="@style/photo_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/global_window_padding"
                android:text="@string/permission_consent" />

            <CheckBox
                android:id="@+id/do_not_show"
                style="@style/photo_item_description_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/global_window_padding"
                android:text="@string/don_t_show_this_message_again"
                android:buttonTint="@color/accent"
                android:visibility="gone"
                android:layout_marginStart="@dimen/global_window_padding_half"
                android:layout_marginEnd="@dimen/global_window_padding_half"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_window_padding"
            android:layout_marginEnd="@dimen/global_window_padding"
            android:layout_marginBottom="@dimen/global_window_padding"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                style="@style/bottom_appbar_button_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/global_window_padding"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/ok"
                style="@style/bottom_appbar_button_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>