<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardBackgroundColor="@color/first">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/global_window_padding_half"
        android:layout_marginBottom="@dimen/global_window_padding_half">

        <TextView
            android:id="@+id/image"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/share_as_image"
            app:drawableStartCompat="@drawable/ic_outline_image_24"
            app:drawableTint="@color/accent" />

        <TextView
            android:id="@+id/link"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/share_as_link"
            app:drawableStartCompat="@drawable/ic_link"
            app:drawableTint="@color/accent" />

        <TextView
            android:id="@+id/download"
            style="@style/photo_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/global_window_padding"
            android:text="@string/save_to_device"
            app:drawableStartCompat="@drawable/ic_twotone_arrow_circle_down_24"
            app:drawableTint="@color/accent" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>