<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.ToolBarTitle.Expanded"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_top_title_text_height"
        android:layout_marginStart="@dimen/global_window_padding"
        android:layout_marginTop="@dimen/global_window_padding"
        android:layout_marginEnd="@dimen/global_window_padding"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/system_for" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_window_padding"
        android:layout_marginTop="@dimen/global_window_padding"
        android:layout_marginEnd="@dimen/global_window_padding"
        android:text="@string/about_description"
        android:textColor="@color/system_for_low"
        android:padding="@dimen/global_window_padding_half"
        android:textSize="@dimen/small_text_size"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/global_window_padding"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="@dimen/global_window_padding"
            android:layout_marginTop="@dimen/global_window_padding"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_window_padding_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/drawable_button_background_ring_icon_padding"
                    android:text="@string/api"
                    android:textColor="@color/system_for_low"
                    app:drawableStartCompat="@drawable/ic_globe"
                    app:drawableTint="@color/accent"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/system_for"
                    android:textSize="@dimen/small_text_size"
                    android:id="@+id/api_provider"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColorLink="@color/accent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_window_padding_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/drawable_button_background_ring_icon_padding"
                    android:text="@string/contact"
                    android:textColor="@color/system_for_low"
                    app:drawableStartCompat="@drawable/ic_at_sign"
                    app:drawableTint="@color/accent"
                    android:textSize="@dimen/small_text_size"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/system_for"
                    android:textSize="@dimen/small_text_size"
                    android:autoLink="email"
                    android:linksClickable="true"
                    android:textColorLink="@color/accent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_window_padding_half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/drawable_button_background_ring_icon_padding"
                    android:text="@string/version"
                    android:textColor="@color/system_for_low"
                    app:drawableStartCompat="@drawable/ic_hash"
                    app:drawableTint="@color/accent"
                    android:textSize="@dimen/small_text_size"/>

                <TextView
                    android:id="@+id/rover_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/system_for_low"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/_1_0"/>
            </LinearLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_window_padding"
        android:layout_marginTop="@dimen/global_window_padding_half"
        android:layout_marginEnd="@dimen/global_window_padding"
        android:layout_marginBottom="@dimen/global_window_padding_half"
        android:text="@string/clear_cache"
        android:textColor="@color/system_for"
        style="@style/bottom_appbar_button_ring"
        android:layout_margin="@dimen/global_window_padding"
        android:background="@drawable/button_background_second"
        android:padding="@dimen/global_window_padding_half"
        android:textSize="@dimen/small_text_size"/>

</LinearLayout>