<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_window_padding_half"
        app:cardBackgroundColor="@color/appbar"
        app:cardCornerRadius="@dimen/corner_radius">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/global_window_padding">

            <TextView
                style="@style/tool_bar_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_top_title_text_height"
                android:layout_marginStart="@dimen/global_window_padding"
                android:layout_marginEnd="@dimen/global_window_padding"
                android:layout_marginBottom="@dimen/global_window_padding"
                android:drawablePadding="@dimen/global_window_padding"
                android:labelFor="@id/solSelectorCount"
                android:text="@string/share"
                android:textColor="@color/system_for"
                app:drawableStartCompat="@drawable/ic_twotone_share_24"
                app:drawableTint="@color/system_for" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/image"
                    style="@style/bottom_appbar_button_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/global_window_padding"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/share_as_image"
                    app:drawableTint="@color/accent"
                    app:drawableTopCompat="@drawable/ic_outline_image_24" />

                <TextView
                    android:id="@+id/link"
                    style="@style/bottom_appbar_button_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/global_window_padding"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/global_window_padding"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/share_as_link"
                    app:drawableTint="@color/accent"
                    app:drawableTopCompat="@drawable/ic_link" />

                <TextView
                    android:id="@+id/download"
                    style="@style/bottom_appbar_button_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/global_window_padding"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/global_window_padding"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/download"
                    app:drawableTint="@color/accent"
                    app:drawableTopCompat="@drawable/ic_twotone_arrow_circle_down_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/select_count"
                style="@style/tool_bar_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_top_title_text_height"
                android:layout_marginStart="@dimen/global_window_padding"
                android:layout_marginTop="@dimen/global_window_padding"
                android:layout_marginEnd="@dimen/global_window_padding"
                android:drawablePadding="@dimen/global_window_padding"
                android:labelFor="@id/solSelectorCount"
                android:text="@string/select"
                android:textColor="@color/system_for"
                app:drawableStartCompat="@drawable/ic_check_square"
                app:drawableTint="@color/system_for" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shareItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_window_padding"
                android:layout_marginBottom="@dimen/global_window_padding" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>